solved alignment issues

--- a/edit_profile1/style.css
+++ b/edit_profile1/style.css
@@ -3,6 +3,7 @@
 
 body{
     margin:0;
+    /* overflow: hidden; */
 }
 
 /* for preloader */
@@ -204,6 +205,10 @@ body{
     color: #3D5A80;
 }
 
+.content{
+    /* border:green solid 2px; */
+}
+
 .content label{
     font-size:20px;
     color: #3D5A80;
@@ -310,13 +315,17 @@ body{
 
 .curve-shape{
     position:relative;
-    top:40px;
+    top:9px;
 }
 
 footer{
     background-color:#3D5A80;
     position: relative;
-    top:20px;
+    /* top:20px; */
+    background-color: #3D5A80;
+    border-style:solid;
+    border-color:#3D5A80;
+    border-bottom-width:4px;
 }
 
 .foot-items{
