--- a/home_page/style.css
+++ b/home_page/style.css
@@ -412,7 +412,7 @@ body{
 .curve-shape2{
     display: none;
     position: relative;
-    top:7px;
+    top:9px;
 }
 
 .footer2{
